--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
         <p>Made by AJ</p>
     </div>
     <footer class="footer">
-        <p>Follow me on Instagram: <a href="https://www.instagram.com/your_username/">@your_username</a></p>
+        <p>Follow me on Instagram: <a href="https://github.com/ghosthets/zerostudy/discussions/1">Student's Discussion Here</a></p>
     </footer>
 </body>
 </html>
