--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
     </header>
         <input type="hidden" id="video-link" value="https://www.dailymotion.com/video/k3S3tyzA43AZZjAWnRs">
     <div id="video-container">
-      <iframe frameborder="0" width="480" height="269" src="" allowfullscreen allow="autoplay; fullscreen; picture-in-picture"></iframe>
+      <iframe frameborder="0" width="400" height="269" src="" allowfullscreen allow="autoplay; fullscreen; picture-in-picture"></iframe>
     </div>
     
 
@@ -59,7 +59,7 @@
         <p>Made by AJ</p>
     </div>
     <footer class="footer">
-        <p>Follow me on Instagram: <a href="https://github.com/ghosthets/zerostudy/discussions/1">Student's Discussion Here</a></p>
+        <p>Follow me on Instagram: <a href="https://instagram.com/the0jr">Student's Discussion Here</a></p>
     </footer>
     
     <script>
