--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,7 @@
     <header class="header">
         <h1>Zerostudy</h1>
     </header>
+    <h3> Periodic Classification 01: Introduction To Periodic Table </h3>
         <input type="hidden" id="video-link" value="https://www.dailymotion.com/video/k3S3tyzA43AZZjAWnRs">
     <div id="video-container">
       <iframe frameborder="0" width="360" height="200" src="" allowfullscreen allow="autoplay; fullscreen; picture-in-picture"></iframe>
