--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,9 @@
     <header class="header">
         <h1>Zerostudy</h1>
     </header>
+    <div class="brown-text-area">
+        <p> Inorganic Chemistry</p>
+    </div>
     <h3> Periodic Classification 01: Introduction To Periodic Table </h3>
         <input type="hidden" id="video-link" value="https://www.dailymotion.com/video/k3S3tyzA43AZZjAWnRs">
     <div id="video-container">
@@ -57,8 +60,10 @@
     
 
     <div class="brown-text-area">
-        <p>Made by AJ</p>
+        <p>Physics</p>
     </div>
+    <h3> Mole Concepts 01: Elements & Compounds
+</h3>
     <footer class="footer">
         <p>Follow me on Instagram: <a href="https://instagram.com/the0jr">Student's Discussion Here</a></p>
     </footer>
