--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,7 @@
     </div>
     <h3> Mole Concepts 01: Elements & Compounds
 </h3>
-    <input type="hidden" id="video-link" value="https://dai.ly/k4HD0IEmegaIX4AWIg2">
+    <input type="hidden" id="video-link" value="https://www.dailymotion.com/video/k4HD0IEmegaIX4AWIg2">
     <div id="video-container">
       <iframe frameborder="0" width="360" height="200" src="" allowfullscreen allow="autoplay; fullscreen; picture-in-picture"></iframe>
     </div>
