--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zerostudy</title>
+    <a href="chat.html" target="_blank">Chat</a>
     <style>
         /* Add some basic styling to make the page look decent */
         body {
