--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,47 @@
-        <div id="discussion-container">
-            <h2>Discussion Forum</h2>
-            <iframe src="https://hack.chat/?zerostudy" frameborder="0" width="100%" height="400px"></iframe>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zerostudy Chat</title>
+    <style>
+        /* Add some basic styling to make the page look decent */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        #discussion-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background-color: #f0f0f0;
+            padding: 20px;
+            text-align: center;
+        }
+        #close-chat {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        #close-chat:hover {
+            background-color: #3e8e41;
+        }
+    </style>
+</head>
+<body>
+    <div id="discussion-container">
+        <h2>Discussion Forum</h2>
+        <iframe src="https://hack.chat/?zerostudy" frameborder="0" width="100%" height="100vh"></iframe>
+        <button id="close-chat" onclick="window.close()">Close Chat</button>
+    </div>
+</body>
+</html>
