--- a/chat.html
+++ b/chat.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div id="discussion-container">
-        <h2>Discussion Forum</h2>
+        <h2>Discussion Place</h2>
         <iframe src="https://hack.chat/?zerostudy" frameborder="0" width="100%" height="100vh"></iframe>
         <button id="close-chat" onclick="window.close()">Close Chat</button>
     </div>
