--- a/chat.html
+++ b/chat.html
@@ -35,11 +35,25 @@
         #close-chat:hover {
             background-color: #3e8e41;
         }
+        /* Add mobile-specific styles */
+        @media only screen and (max-width: 768px) {
+            #discussion-container {
+                padding: 10px;
+            }
+            iframe {
+                height: calc(100vh - 100px);
+            }
+            #close-chat {
+                top: 5px;
+                right: 5px;
+                padding: 5px 10px;
+            }
+        }
     </style>
 </head>
 <body>
     <div id="discussion-container">
-        <h2>Discussion Place</h2>
+        <h2>Discussion Forum</h2>
         <iframe src="https://hack.chat/?zerostudy" frameborder="0" width="100%" height="100vh"></iframe>
         <button id="close-chat" onclick="window.close()">Close Chat</button>
     </div>
