--- a/hindi.html
+++ b/hindi.html
@@ -1,15 +1,41 @@
-पाठ-
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>नमक का दारोगा</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
 
-नमक का दारोगा
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #333;
+        }
 
-(प्रेमचंद
+        .question {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
 
-कहानी का कॉत-सा पात्र आपको सर्वाधिक प्रभावित करता है और क्यों?
+        .answer {
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
 
-1
+    <h1>नमक का दारोगा</h1>
 
-कहानी (नमक का दारोगा का माख्य पात्र संशी वंशीवर में सर्वाधिक प्रभावित करता है क्योंकि वह एक ईमानदार सत्यनिष्ठ, धर्मनिष्ठ, कर्तव्यपरायण आई चरित्रवान है। उसके पिता उसे बेईमानी का पाठ पढ़ाते है परन्त स्वाभिमानी वंशीदार अपनी बहिद के कारण पिता के बताए हुए मार्ग पर त चलकर सत्य के मार्ग की अपनाता है मुकदमा हास्नेपर भी प्राछतावा नहीं करता है उसकी नौकर जाने पर भी वह अपना स्वाभिमान नहीं छोड़ता है इसी का परिणाम था कि कहानी के अन्त में आलीपीदीत ने उसे अपनी सारी सम्यांती का स्थायी मैनेजर प्रभावित करती उसकी यहीं चारित्रिक दृढता हमे
+    <div class="question">1. कहानी का कौन-सा पात्र आपकी सर्वाधिक प्रभावित करता है और क्यों?</div>
+    <div class="answer">कहानी "नमक का दारोगा" का मुख्य पात्र संशी वंशीधर हमें सर्वाधिक प्रभावित करता है क्योंकि वह एक ईमानदार, सत्यनिष्ठ, धर्मनिष्ठ, कर्तव्यपरायण और चरित्रवान है। उसके सत्य का पाठ पढ़ाते है परन्तु स्वाभिमानी वंशीधर अपनी बहिद के कारण पिता के बताए हुए मार्ग पर त चलकर सत्य के मार्ग को अपनाता है। मुकदमा हारनेपर भी वह पछतावा नहीं करता है। उसकी नौकरी छूट जाने पर भी वह अपना स्वाभिमान तही छोड़ता है। इसी का परिणाम था कि कहानी के अन्त में आलोपीदीन ने उसे अपनी सारी सम्पाती का स्थायी मैनेजर बना दिया। उसकी यहीं चारित्रिक दृढ़ता हमे प्रभावित करती है।</div>
 
-नमक का दारोगा कहानी में पंडित आलीपीदीन के व्यक्तिन के कॉन से दो पहलू (पक्ष) उभरकर आते हैं? नमक का कहानी का इसरा मुख्यपात्र पंडित आलीपीदीत है। उनके व्यक्तित्त्व के दो पहलू इस प्रकार है-1
+    <div class="question">2.नमक का दारोगा । कहानी मे मंडित आलीपीदीन के व्यक्तित्व के कौन से दो पहलू (पक्ष) उभरकर आते हैं?</div>
+    <div class="answer">नमक का दारोगा कहानी का दसरा मुख्यपात्र पंडित आलोपीदीन है। उनके व्यक्तित्व के दो पहलू इस प्रकार है-1<br>भ्रष्ट व्यक्तित्व पंडित आलीपीदीन के व्यक्तित्व का यह पक्ष नकारात्मक है। वह सभी बुरे कामों को रात के अँधेरे में बड़े आराम से करता है। धन कमाने के लिए अपने धन का गैर कानूनी उपयोग करता है। उसने सरकारी अधिकारीयों एवं कर्मचारीयों को रिस्वत देकर भ्रष्ट बना दिया है। इस कहानी में उसे चालाक और वाचाल व्यक्ति के रूप</div>
 
-। भ्रष्ट व्यक्तित्व पंडित आलीपीदीन के व्यक्तित्व का महू पक्ष नकारात्मक है। सभी झूरे कामों को रात के अँधेरे में बड़े आराम से करता है। धन कमाने अपने धन का कमाने के लिए गैर कानूनी उपयोग करता है। उसने सरकारी अधिकारीयों एवं कर्मनातियों को रिश्वत देकर भ्रष्ट बना दिया है। इस कहानी में उसे चालाक और वाचाल व्यक्ति के रूप
+</body>
+</html>
