--- a/hindi.html
+++ b/hindi.html
@@ -36,6 +36,50 @@
 
     <div class="question">2.नमक का दारोगा । कहानी मे मंडित आलीपीदीन के व्यक्तित्व के कौन से दो पहलू (पक्ष) उभरकर आते हैं?</div>
     <div class="answer">नमक का दारोगा कहानी का दसरा मुख्यपात्र पंडित आलोपीदीन है। उनके व्यक्तित्व के दो पहलू इस प्रकार है-1<br>भ्रष्ट व्यक्तित्व पंडित आलीपीदीन के व्यक्तित्व का यह पक्ष नकारात्मक है। वह सभी बुरे कामों को रात के अँधेरे में बड़े आराम से करता है। धन कमाने के लिए अपने धन का गैर कानूनी उपयोग करता है। उसने सरकारी अधिकारीयों एवं कर्मचारीयों को रिस्वत देकर भ्रष्ट बना दिया है। इस कहानी में उसे चालाक और वाचाल व्यक्ति के रूप</div>
+    
+
+    <div class="question">
+        हिंदी प्रश्नोत्तरी में दिखाया गया है। जिसने अपनी चतुराई से अपना एक सम्मानित स्थान बताया है। भ्रष्ट व्यक्तित्व की  नहीं की जा सकेगी।
+    </div>
+    <div class="answer">
+        इसमें दिखाया गया है। जिसने अपनी चतुराई से अपना एक सम्मानित स्थान बताया है। भ्रष्ट व्यक्तित्व की  नहीं की जा सकेगी।
+    </div>
+
+    <div class="question">
+        उज्जवल व्यक्तित्वक  कटानी के अंत में पंडित आलीपीदीत के व्यक्तित्व का सकारात्मक पक्ष उभरकर आता है। वंशीधर के द्वारा मिल्कतार करने पर अपने अपमान का बदला लेने के लिए उसे नौकरी से निकलवा देता है। किल्ल दारोगा के दृट्चरित्र के सामने उसका महंकार समस्त ही जाता है। उसकी ईमानदारी से प्रभावित होकर पंडित आलीपीटीन, मुंशी वंशीधर की अपती सारी सम्पत्ती का स्थायी मैनेजर नियुक्त करता है। पंडित आलीपीदीन के व्यक्तित्व का यह पक्ष करने योग्य है।
+    </div>
+    <div class="answer">
+        उज्जवल व्यक्तित्वक  कटानी के अंत में पंडित आलीपीदीत के व्यक्तित्व का सकारात्मक पक्ष उभरकर आता है। वंशीधर के द्वारा मिल्कतार करने पर अपने अपमान का बदला लेने के लिए उसे नौकरी से निकलवा देता है। किल्ल दारोगा के दृट्चरित्र के सामने उसका महंकार समस्त ही जाता है। उसकी ईमानदारी से प्रभावित होकर पंडित आलीपीटीन, मुंशी वंशीधर की अपती सारी सम्पत्ती का स्थायी मैनेजर नियुक्त करता है। पंडित आलीपीदीन के व्यक्तित्व का यह पक्ष करने योग्य है।
+    </div>
+
+    <div class="question">
+        निम्न पंक्ति‌यो  - तुम्हे क्या समझाऊँ ।
+    </div>
+    <div class="answer">
+        निम्न पंक्ति‌यो  - तुम्हे क्या समझाऊँ ।
+    </div>
+
+    <div class="question">
+        यह किसकी उक्ति है?
+    </div>
+    <div class="answer">
+        यह अक्ति वंशीधर के बेटे पिताजी की है।
+    </div>
+
+    <div class="question">
+        मासिक वेतन को पूर्णमासी का चाँद क्यों कहा गया है?
+    </div>
+    <div class="answer">
+        मासिक वेतन की पूर्णमासी का चाँद इसलिए कहा जीता है। क्योंकि जिस प्रकार पूर्णमासी का चाँद दिखाई देता है। उसके बाद दसरे दिन, से ही घटता जाता है। उसी प्रकार मासिक वेतन भी महीने में एक बार मिलता है किन्तु अगले दिन से खर्च होकर अंत में समाप्त हो जाता है।
+    </div>
+
+    <div class="question">
+        क्या आप एक पिता के इस वक्तव्य से सहमत है?
+    </div>
+    <div class="answer">
+        नहीं, हम पिता के इस वक्तव्य से बिलकुल भी सहमत नहीं है क्योंकि पिता का कर्तव्य होता है कि वह अपनी संतान को भ्रष्टाचार और बुराई‌यो से 
+    </div>
+    
 
 </body>
 </html>
