--- a/hindi.html
+++ b/hindi.html
@@ -79,6 +79,29 @@
     <div class="answer">
         नहीं, हम पिता के इस वक्तव्य से बिलकुल भी सहमत नहीं है क्योंकि पिता का कर्तव्य होता है कि वह अपनी संतान को भ्रष्टाचार और बुराई‌यो से 
     </div>
+        <h2>अध्याय 1: ईमानदारी का महत्व</h2>
+    <div class="question">
+        प्र.1.5  तमुक का दारोगा कहानी के कोई दो शीर्षक बताते हुए उसके आधार को भी स्पष्ट कीजिए।
+    </div>
+    <div class="answer">
+        <p>
+        यह कहानी पूरी तरह मुंशी वंशीधर पर आधारित है जो अपने कार्य के प्रति ईमानदार और कर्तव्य परायण है। वह पूरी तरह ईमान‌दारी से अपने कर्तव्य की निभाते है अतः धर्मनिष्ट दारोगा शीर्षक कहानी।
+        </p>
+        <p>
+        घन पर धर्म की जीत
+        </p>
+        <p>
+        मुख्य उद्देश्य शीर्षक कहानी के मस्य है। वंशीधर धर्म के रास्ते पर चलते हुए अनेक कठिनाईयों का सामना करते हैं। पंडित आलोपीदीन अपने धन के द्वारा उसे भूकाने का प्रयास करते हैं पस्तु अंत में वर्म की जीत, होती है। अतः धन पर धर्म की जीत शीर्षक कहानी के उपयुक्त है।
+        </p>
+    </div>
+    <div class="question">
+        प्र.6 कहानी के अंत में आलीपीदीन के वंशीधर को मैनेजर नियुक्त करने के पीछे क्या कारण हो सकते हैं? तर्क सहित अतर दीजिए। आप इस कहानी का अंत किस प्रकार करते १
+    </div>
+    <div class="answer">
+        <p>
+        कहानी के अंत में अलोपीदीन के द्वारा वंशीधर को मैनेजर नियुक्त करने के पीछे यह कारण है कि पंडित अलोपीदीन की लोगों पर विश्वास नहीं था। उसने आजतक बिकाऊ, बेईमान और भ्रष्ट लोगों को ही देखा था। उसने अपने धन के द्वारा रिश्वत और लालच से सबको अपने सामने झुका दिया था।
+        </p>
+    </div>
     
 
 </body>
