--- a/hindi.html
+++ b/hindi.html
@@ -102,6 +102,11 @@
         कहानी के अंत में अलोपीदीन के द्वारा वंशीधर को मैनेजर नियुक्त करने के पीछे यह कारण है कि पंडित अलोपीदीन की लोगों पर विश्वास नहीं था। उसने आजतक बिकाऊ, बेईमान और भ्रष्ट लोगों को ही देखा था। उसने अपने धन के द्वारा रिश्वत और लालच से सबको अपने सामने झुका दिया था।
         </p>
     </div>
+    <div class="container">
+        <h2>प्रश्न १</h2>
+        <p class="question">केवल वंशीधर ही ऐसा व्यक्ति था जो हजारों रूपयो की रिश्वत के सामने नहीं सका था। उसे अपनी सम्पाती के लिए ऐसा ही दृट्‌चरित्र, ईमानदार और कठोर प्रबन्धक चाहिए था। इसलिए उसने अपनी सारी सम्पती का स्थायी मैनेजर मुंशी वंशीधर को नियुक्त कर दिया। हम भी इस कहानी का अंत इसी प्रकार अच्छाई की जीत दिखाकर करता।</p>
+        <p class="answer">यह कहानी वंशीधर के ईमानदारी और सच्चाई के बारे में बताती है। वह हजारों रूपयो की रिश्वत लेने से इनकार करके अपनी ईमानदारी और नैतिकता को दर्शाता है। यह कहानी अच्छाई की जीत और बुराई पर अच्छाई की विजय का प्रतीक है।</p>
+    </div>
     
 
 </body>
