--- a/Index.html
+++ b/Index.html
@@ -61,6 +61,7 @@
         <h1>Zerostudy</h1>
         <button class="chat-button" onclick="location.href='chat.html'">Chat</button>
         <button class="chat-button" onclick="location.href='hindi.html'">BGP Hindi Notes</button>
+        <button class="chat-button" onclick="location.href='hindi.html'">BGP ENG Notes</button>
     </header>
     <div class="brown-text-area">
         <p>Inorganic Chemistry</p>
