--- a/Index.html
+++ b/Index.html
@@ -60,8 +60,8 @@
     <header class="header">
         <h1>Zerostudy</h1>
         <button class="chat-button" onclick="location.href='chat.html'">Chat</button>
-        <button class="chat-button" onclick="location.href='hindi.html'">BGP Hindi Notes</button>
-        <button class="chat-button" onclick="location.href='eng.html'">BGP ENG Notes</button>
+        <button class="chat-button" onclick="location.href='hindi.html'">Hindi</button>
+        <button class="chat-button" onclick="location.href='eng.html'">English</button>
     </header>
     <div class="brown-text-area">
         <p>Inorganic Chemistry</p>
