--- a/Index.html
+++ b/Index.html
@@ -62,6 +62,7 @@
         <button class="chat-button" onclick="location.href='chat.html'">Chat</button>
         <button class="chat-button" onclick="location.href='hindi.html'">Hindi</button>
         <button class="chat-button" onclick="location.href='eng.html'">English</button>
+        <button class="chat-button" onclick="location.href='eq1.html'">Penguin Edu</button>
     </header>
     <div class="brown-text-area">
         <p>Inorganic Chemistry</p>
