--- a/eq1.html
+++ b/eq1.html
@@ -3,92 +3,330 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equation Solutions</title>
+    <title>Physics Questions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h2, h3 {
-            color: #2F4F4F;
-        }
-        p {
-            font-size: 1.2em;
             line-height: 1.6;
         }
-        .equation {
-            font-size: 1.4em;
-            font-weight: bold;
-            background-color: #f5f5f5;
-            padding: 10px;
-            border-left: 5px solid #2F4F4F;
-            margin-bottom: 20px;
+        h1 {
+            text-align: center;
+            color: #333;
         }
-        .answer {
-            font-size: 1.4em;
-            color: #2E8B57;
-            margin-top: 10px;
+        ul {
+            list-style-type: none;
+        }
+        .correct {
+            color: green;
+            font-weight: bold;
+            font-style: italic;
         }
     </style>
 </head>
 <body>
-    <h2>Equation 1:</h2>
-    <p class="equation">(1 + i)<sup>-5</sup> &times; (1 + 1/i)<sup>5</sup> = 32</p>
+    <h1>11th Class Physics - Choose the Correct Questions</h1>
 
-    <h3>Step-by-step Solution:</h3>
-    <p><strong>Simplify the second term:</strong></p>
-    <p>We know that:</p>
-    <p>1 + 1/i = 1 - i</p>
+    <h2>Chapter 1: Physical World</h2>
+    <ul>
+        <li>A physical quantity that has both magnitude and direction is called:
+            <ul>
+                <li>a) Scalar</li>
+                <li class="correct">b) Vector</li>
+                <li>c) Constant</li>
+                <li>d) Variable</li>
+            </ul>
+        </li>
+        <li>The SI unit of force is:
+            <ul>
+                <li class="correct">a) Newton</li>
+                <li>b) Joule</li>
+                <li>c) Pascal</li>
+                <li>d) Watt</li>
+            </ul>
+        </li>
+        <li>The law of conservation of energy states that:
+            <ul>
+                <li>a) Energy can be created</li>
+                <li>b) Energy can be destroyed</li>
+                <li class="correct">c) Energy can neither be created nor destroyed</li>
+                <li>d) Energy is constant</li>
+            </ul>
+        </li>
+        <li>Which of the following is a scalar quantity?
+            <ul>
+                <li>a) Velocity</li>
+                <li class="correct">b) Speed</li>
+                <li>c) Acceleration</li>
+                <li>d) Force</li>
+            </ul>
+        </li>
+        <li>What is the unit of energy in the SI system?
+            <ul>
+                <li>a) Joule</li>  <!-- Correct Answer -->
+                <li>b) Newton</li>
+                <li>c) Watt</li>
+                <li>d) Pascal</li>
+            </ul>
+        </li>
+        <li>Which of the following is an example of a vector quantity?
+            <ul>
+                <li class="correct">a) Displacement</li>
+                <li>b) Distance</li>
+                <li>c) Mass</li>
+                <li>d) Time</li>
+            </ul>
+        </li>
+        <li>The standard unit of length in the SI system is:
+            <ul>
+                <li class="correct">a) Meter</li>
+                <li>b) Centimeter</li>
+                <li>c) Kilometer</li>
+                <li>d) Millimeter</li>
+            </ul>
+        </li>
+        <li>The dimensional formula for velocity is:
+            <ul>
+                <li>a) [LT<sup>-1</sup>]</li>  <!-- Correct Answer -->
+                <li>b) [L<sup>2</sup>T<sup>-1</sup>]</li>
+                <li>c) [M<sup>2</sup>T]</li>
+                <li>d) [MT<sup>-2</sup>]</li>
+            </ul>
+        </li>
+        <li>The process of obtaining the value of a physical quantity is called:
+            <ul>
+                <li class="correct">a) Measurement</li>
+                <li>b) Observation</li>
+                <li>c) Experimentation</li>
+                <li>d) Calculation</li>
+            </ul>
+        </li>
+    </ul>
 
-    <p><strong>Rewriting the equation:</strong></p>
-    <p>(1 + i)<sup>-5</sup> &times; (1 - i)<sup>5</sup> = 32</p>
+    <h2>Chapter 2: Units and Measurements</h2>
+    <ul>
+        <li>The least count of a vernier caliper is:
+            <ul>
+                <li class="correct">a) 0.1 mm</li>
+                <li>b) 0.01 mm</li>
+                <li>c) 1 mm</li>
+                <li>d) 0.5 mm</li>
+            </ul>
+        </li>
+        <li>A derived unit is:
+            <ul>
+                <li>a) Length</li>
+                <li>b) Time</li>
+                <li class="correct">c) Area</li>
+                <li>d) Mass</li>
+            </ul>
+        </li>
+        <li>The dimensional formula of force is:
+            <ul>
+                <li class="correct">a) [ML<sup>2</sup>T<sup>-2</sup>]</li>
+                <li>b) [MLT]</li>
+                <li>c) [M<sup>2</sup>T<sup>-1</sup>]</li>
+                <li>d) [MT<sup>2</sup>]</li>
+            </ul>
+        </li>
+        <li>The unit of acceleration in the SI system is:
+            <ul>
+                <li>a) m/s</li>
+                <li class="correct">b) m/s<sup>2</sup></li>
+                <li>c) m<sup>2</sup>/s</li>
+                <li>d) m/s<sup>3</sup></li>
+            </ul>
+        </li>
+        <li>The uncertainty in a measurement is defined as:
+            <ul>
+                <li>a) The difference between the maximum and minimum values</li>
+                <li class="correct">b) The range of possible values</li>
+                <li>c) The average of measurements</li>
+                <li>d) The precision of the measurement</li>
+            </ul>
+        </li>
+        <li>Which of the following is not a fundamental quantity?
+            <ul>
+                <li>a) Length</li>
+                <li class="correct">b) Density</li>
+                <li>c) Mass</li>
+                <li>d) Time</li>
+            </ul>
+        </li>
+        <li>The SI unit of pressure is:
+            <ul>
+                <li class="correct">a) Pascal</li>
+                <li>b) Newton</li>
+                <li>c) Joule</li>
+                <li>d) Bar</li>
+            </ul>
+        </li>
+        <li>What is the unit of frequency in the SI system?
+            <ul>
+                <li>a) Hertz</li>  <!-- Correct Answer -->
+                <li>b) Joule</li>
+                <li>c) Newton</li>
+                <li>d) Watt</li>
+            </ul>
+        </li>
+        <li>The instrument used to measure temperature is:
+            <ul>
+                <li class="correct">a) Thermometer</li>
+                <li>b) Barometer</li>
+                <li>c) Hygrometer</li>
+                <li>d) Anemometer</li>
+            </ul>
+        </li>
+    </ul>
 
-    <p>Next, using the properties of complex numbers:</p>
-    <p>(1 + i)<sup>-5</sup> = 1 / (1 + i)<sup>5</sup></p>
+    <h2>Chapter 3: Motion in a Straight Line</h2>
+    <ul>
+        <li>If a car travels 60 km in 1 hour, its speed is:
+            <ul>
+                <li class="correct">a) 60 km/h</li>
+                <li>b) 120 km/h</li>
+                <li>c) 30 km/h</li>
+                <li>d) 90 km/h</li>
+            </ul>
+        </li>
+        <li>Displacement can be greater than distance:
+            <ul>
+                <li>a) True</li>
+                <li class="correct">b) False</li>
+            </ul>
+        </li>
+        <li>The acceleration of an object in uniform circular motion is:
+            <ul>
+                <li>a) Zero</li>
+                <li>b) Constant</li>
+                <li class="correct">c) Directed towards the center</li>
+                <li>d) In the direction of motion</li>
+            </ul>
+        </li>
+        <li>The equation of motion for uniformly accelerated linear motion is:
+            <ul>
+                <li class="correct">a) v = u + at</li>
+                <li>b) s = ut + 1/2 at<sup>2</sup></li>
+                <li>c) s = vt - 1/2 at<sup>2</sup></li>
+                <li>d) All of the above</li>
+            </ul>
+        </li>
+        <li>The slope of a distance-time graph represents:
+            <ul>
+                <li>a) Speed</li>  <!-- Correct Answer -->
+                <li>b) Acceleration</li>
+                <li>c) Velocity</li>
+                <li>d) Distance</li>
+            </ul>
+        </li>
+        <li>Which of the following is an example of non-uniform motion?
+            <ul>
+                <li>a) A car moving with a constant speed</li>
+                <li class="correct">b) A car accelerating</li>
+                <li>c) A train moving at a constant speed</li>
+                <li>d) A person walking at a steady pace</li>
+            </ul>
+        </li>
+        <li>The area under a velocity-time graph represents:
+            <ul>
+                <li class="correct">a) Displacement</li>
+                <li>b) Distance</li>
+                <li>c) Acceleration</li>
+                <li>d) Speed</li>
+            </ul>
+        </li>
+        <li>When an object is thrown upward, its velocity:
+            <ul>
+                <li>a) Increases</li>
+                <li class="correct">b) Decreases</li>
+                <li>c) Remains constant</li>
+                <li>d) Becomes zero</li>
+            </ul>
+        </li>
+        <li>The unit of acceleration is:
+            <ul>
+                <li>a) m/s</li>
+                <li class="correct">b) m/s<sup>2</sup></li>
+                <li>c) m<sup>2</sup>/s</li>
+                <li>d) m/s<sup>3</sup></li>
+            </ul>
+        </li>
+    </ul>
 
-    <p>We know that (1 + i)<sup>5</sup> and (1 - i)<sup>5</sup> result in powers of complex numbers. After expanding and simplifying, we find that both terms cancel out and the product is simplified:</p>
-
-    <p><strong>Final Answer:</strong></p>
-    <p class="answer">32 = 32 (Equation is true)</p>
-
-    <h2>Equation 2:</h2>
-    <p class="equation">(1 - i)<sup>n</sup> &times; (1 - 1/i)<sup>n</sup> = 2<sup>n</sup></p>
-
-    <h3>Step-by-step Solution:</h3>
-    <p><strong>Simplify the second term:</strong></p>
-    <p>1 - 1/i = 1 + i</p>
-
-    <p><strong>Rewriting the equation:</strong></p>
-    <p>(1 - i)<sup>n</sup> &times; (1 + i)<sup>n</sup> = 2<sup>n</sup></p>
-
-    <p>Now, use the fact that multiplying (1 - i) and (1 + i) gives:</p>
-    <p>(1 - i)(1 + i) = 1 - i<sup>2</sup> = 1 - (-1) = 2</p>
-
-    <p>Thus:</p>
-    <p>(1 - i)<sup>n</sup> &times; (1 + i)<sup>n</sup> = 2<sup>n</sup></p>
-
-    <p><strong>Final Answer:</strong></p>
-    <p class="answer">Equation holds true.</p>
-
-    <h2>Equation 3:</h2>
-    <p class="equation">(1 - 1/i)<sup>4</sup> &times; (1 - 1/i)<sup>4</sup> = -8</p>
-
-    <h3>Step-by-step Solution:</h3>
-    <p><strong>Simplify the terms:</strong></p>
-    <p>1 - 1/i = 1 + i</p>
-
-    <p>Rewriting the equation:</p>
-    <p>(1 + i)<sup>4</sup> &times; (1 + i)<sup>4</sup> = -8</p>
-
-    <p>We know that (1 + i)<sup>4</sup> can be expanded using De Moivre's Theorem or binomial expansion:</p>
-    <p>(1 + i)<sup>4</sup> = 4i</p>
-
-    <p>Now multiplying both terms:</p>
-    <p>(4i) &times; (4i) = -16</p>
-
-    <p>But the equation requires a result of -8, so we conclude:</p>
-    <p><strong>Final Answer:</strong></p>
-    <p class="answer">Equation does not hold (error in the equation).</p>
+    <h2>Chapter 4: Motion in a Plane</h2>
+    <ul>
+        <li>A projectile is thrown with an initial velocity of 20 m/s at an angle of 30°. The horizontal component of velocity is:
+            <ul>
+                <li>a) 10 m/s</li>
+                <li class="correct">b) 17.32 m/s</li>
+                <li>c) 20 m/s</li>
+                <li>d) 15 m/s</li>
+            </ul>
+        </li>
+        <li>The time of flight (T) for a projectile launched at an angle θ with initial velocity u is given by T = 2u sin θ/g. If u = 50 m/s and θ = 30°, find T:
+            <ul>
+                <li class="correct">a) 5 s</li>
+                <li>b) 10 s</li>
+                <li>c) 3.5 s</li>
+                <li>d) 8 s</li>
+            </ul>
+        </li>
+        <li>The maximum height (H) of a projectile is given by:
+            <ul>
+                <li class="correct">a) H = u<sup>2</sup> sin θ / 2g</li>
+                <li>b) H = u sin θ</li>
+                <li>c) H = 2u<sup>2</sup> sin θ</li>
+                <li>d) H = u<sup>2</sup> / g</li>
+            </ul>
+        </li>
+        <li>The horizontal range (R) of a projectile is given by:
+            <ul>
+                <li class="correct">a) R = u<sup>2</sup> sin 2θ / g</li>
+                <li>b) R = 2u sin θ</li>
+                <li>c) R = u<sup>2</sup> / g</li>
+                <li>d) R = u cos θ</li>
+            </ul>
+        </li>
+        <li>The angle of projection for maximum range is:
+            <ul>
+                <li>a) 30°</li>
+                <li class="correct">b) 45°</li>
+                <li>c) 60°</li>
+                <li>d) 90°</li>
+            </ul>
+        </li>
+        <li>For a projectile, the horizontal component of velocity remains:
+            <ul>
+                <li>a) Constant</li>  <!-- Correct Answer -->
+                <li>b) Variable</li>
+                <li>c) Zero</li>
+                <li>d) Dependent on time</li>
+            </ul>
+        </li>
+        <li>The range of a projectile launched with an initial velocity u at an angle θ is given by:
+            <ul>
+                <li>a) R = u<sup>2</sup> sin θ</li>
+                <li class="correct">b) R = u<sup>2</sup> sin 2θ / g</li>
+                <li>c) R = 2u sin θ</li>
+                <li>d) R = u cos θ</li>
+            </ul>
+        </li>
+        <li>The path of a projectile is:
+            <ul>
+                <li class="correct">a) Parabolic</li>
+                <li>b) Linear</li>
+                <li>c) Circular</li>
+                <li>d) Elliptical</li>
+            </ul>
+        </li>
+        <li>The time taken to reach maximum height for a projectile is given by:
+            <ul>
+                <li>a) u/g</li>  <!-- Correct Answer -->
+                <li>b) 2u/g</li>
+                <li>c) u<sup>2</sup>/g</li>
+                <li>d) 2u<sup>2</sup>/g</li>
+            </ul>
+        </li>
+    </ul>
 
 </body>
 </html>
